--- a/styles/NavBar.module.css
+++ b/styles/NavBar.module.css
@@ -1,7 +1,9 @@
 .nav {
+	position: fixed;
+	top: 0;
+	left: 0;
 	width: 100%;
 	height: 64px;
-	background-color: #6610f2;
 	display: flex;
 	flex-direction: row;
 }
@@ -18,4 +20,9 @@
 }
 .linkHover:hover {
 	color: rgba(255, 255, 255, 0.75);
+}
+.offset {
+	display: block;
+	width: 100%;
+	height: 64px;
 }
